--- a/angularapp1.client/angular.json
+++ b/angularapp1.client/angular.json
@@ -39,10 +39,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
